--- a/pages/registration.html
+++ b/pages/registration.html
@@ -56,8 +56,8 @@
                     username : username.toString(),
                     password : password.toString(),
 					mobileNumber: mobileNumber.toString(),
-					address: address.toString,
-					adminPassword: adminPassword.toString
+					address: address.toString(),
+					adminPassword: adminPassword.toString()
 					
                 }),
                 dataType: 'json',
