--- a/pages/registration.html
+++ b/pages/registration.html
@@ -63,9 +63,12 @@
                 dataType: 'json',
                 success: function (response)
                 {
+				if (response.message === "Success"){
                     alert("success");
                     location.href='login.html';
-
+				} else {
+					alert("wrong admin password");
+				}
                 }
                 , error: function (error) {
                     alert(error.message);
